# src/routes/upload/index.js
@@ -5,11 +5,11 @@ const { authentication } = require("../../auth/authUtils");
 const { asyncHandler } = require("../../helpers/asyncHandler");
 const uploadController = require("../../controller/upload.controller");
 const { uploadDisk, uploadMemory } = require("../../config/multer.config");
+const { requireAdmin } = require("../../middlewares/admin.middleware");
 const router = express.Router();
 
-/////// Authentication ///////
-//router.use(authentication);
-/////////////////////////////
+router.use(authentication, requireAdmin);
+
 router.post(
   "/product",
   uploadMemory.single("file"),
